# oauth2ms

./: pyproject.toml
oauth2ms/: __init__.py  __main__.py  oauth2ms.py
